--- a/src/app/game-world/game-world.component.html
+++ b/src/app/game-world/game-world.component.html
@@ -1,91 +1,93 @@
-<div class="left">
-  <div class="mat-title">Players</div>
-  <div class="entity-container">
-    <app-player
-      appTargetable
-      *ngFor="let player of worldView.players"
-      [entityId]="player.id"
-      [player]="player"
-    ></app-player>
-  </div>
-  <div class="mat-title">
-    Forge
-    <span
-      *ngIf="worldView.throneDeck.length == 0"
-      class="throne-active mat-subheading-2"
-    >
-      Throne active
-    </span>
-  </div>
-  <div class="entity-container">
-    <div class="throne-deck" *ngIf="worldView.throneDeck.length > 0">
-      <div>Seek Power remaining: {{ worldView.throneDeck.length }}</div>
-      <!-- Loop hack so angular knows to always update this. -->
-      <ng-container
-        *ngFor="let seekPower of worldView.throneDeck; first as isFirst"
-      >
-        <app-card
-          appTargetable
-          *ngIf="isFirst"
-          [entityId]="seekPower.id"
-          [card]="seekPower"
-        ></app-card>
-      </ng-container>
+<ng-container *ngIf="worldView$ | async as worldView">
+  <div class="left">
+    <div class="mat-title">Players</div>
+    <div class="entity-container">
+      <app-player
+        appTargetable
+        *ngFor="let player of worldView.players"
+        [entityId]="player.id"
+        [player]="player"
+      ></app-player>
     </div>
-    <div class="mercenary-deck" *ngIf="worldView.mercenaryDeck.length > 0">
-      <div>
-        Veteran Mercenary remaining: {{ worldView.mercenaryDeck.length }}
+    <div class="mat-title">
+      Forge
+      <span
+        *ngIf="worldView.throneDeck.length == 0"
+        class="throne-active mat-subheading-2"
+      >
+        Throne active
+      </span>
+    </div>
+    <div class="entity-container">
+      <div class="throne-deck" *ngIf="worldView.throneDeck.length > 0">
+        <div>Seek Power remaining: {{ worldView.throneDeck.length }}</div>
+        <!-- Loop hack so angular knows to always update this. -->
+        <ng-container
+          *ngFor="let seekPower of worldView.throneDeck; first as isFirst"
+        >
+          <app-card
+            appTargetable
+            *ngIf="isFirst"
+            [entityId]="seekPower.id"
+            [card]="seekPower"
+          ></app-card>
+        </ng-container>
       </div>
-      <ng-container
-        *ngFor="let mercenary of worldView.mercenaryDeck; first as isFirst"
-      >
-        <app-card
-          appTargetable
-          *ngIf="isFirst"
-          [entityId]="mercenary.id"
-          [card]="mercenary"
-        ></app-card>
-      </ng-container>
+      <div class="mercenary-deck" *ngIf="worldView.mercenaryDeck.length > 0">
+        <div>
+          Veteran Mercenary remaining: {{ worldView.mercenaryDeck.length }}
+        </div>
+        <ng-container
+          *ngFor="let mercenary of worldView.mercenaryDeck; first as isFirst"
+        >
+          <app-card
+            appTargetable
+            *ngIf="isFirst"
+            [entityId]="mercenary.id"
+            [card]="mercenary"
+          ></app-card>
+        </ng-container>
+      </div>
+    </div>
+    <div class="mat-subheading-2">Forge row</div>
+    <div class="entity-container">
+      <app-card
+        appTargetable
+        *ngFor="let card of worldView.forgeRow"
+        [entityId]="card.id"
+        [card]="card"
+      ></app-card>
     </div>
   </div>
-  <div class="mat-subheading-2">Forge row</div>
-  <div class="entity-container">
-    <app-card
-      appTargetable
-      *ngFor="let card of worldView.forgeRow"
-      [entityId]="card.id"
-      [card]="card"
-    ></app-card>
+  <div class="right">
+    <div class="mat-title">Attacking Units</div>
+    <div class="entity-container">
+      <app-unit
+        class="attacking"
+        appTargetable
+        *ngFor="let unit of worldView.attackingUnits"
+        [entityId]="unit.id"
+        [unit]="unit"
+      ></app-unit>
+    </div>
+    <div class="mat-title">Defending Units</div>
+    <div class="entity-container">
+      <app-unit
+        class="defending"
+        appTargetable
+        *ngFor="let unit of worldView.defendingUnits"
+        [entityId]="unit.id"
+        [unit]="unit"
+      ></app-unit>
+    </div>
+    <div class="mat-title">Play Area</div>
+    <div class="entity-container">
+      <app-card
+        appTargetable
+        *ngFor="let card of worldView.playArea"
+        [entityId]="card.id"
+        [card]="card"
+      ></app-card>
+    </div>
   </div>
-</div>
-<div class="right">
-  <div class="mat-title">Attacking Units</div>
-  <div class="entity-container">
-    <app-unit
-      class="attacking"
-      appTargetable
-      *ngFor="let unit of worldView.attackingUnits"
-      [entityId]="unit.id"
-      [unit]="unit"
-    ></app-unit>
-  </div>
-  <div class="mat-title">Defending Units</div>
-  <div class="entity-container">
-    <app-unit
-      class="defending"
-      appTargetable
-      *ngFor="let unit of worldView.defendingUnits"
-      [entityId]="unit.id"
-      [unit]="unit"
-    ></app-unit>
-  </div>
-  <div class="mat-title">Play Area</div>
-  <div class="entity-container">
-    <app-card
-      appTargetable
-      *ngFor="let card of worldView.playArea"
-      [entityId]="card.id"
-      [card]="card"
-    ></app-card>
-  </div>
-</div>
+</ng-container>
