--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -9,6 +9,9 @@
   width: 300px
   word-break: break-word
 
+:host(.hand)
+  background-color: #FAFAFA
+
 .header
   align-items: center
   display: flex
