--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -92,6 +92,7 @@
     <div class="mat-title">Hand</div>
     <div class="entity-container">
       <app-card
+        class="hand"
         appTargetable
         *ngFor="let card of gameview.hand"
         [entityId]="card.id"
