--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -7,11 +7,14 @@
   flex: 2
   flex-direction: column
 
-.right
+.middle
   align-items: center
   display: flex
   flex: 3
   flex-direction: column
+
+.right
+  flex: 1
 
 .entity-container
   align-items: flex-start
