--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -101,8 +101,10 @@
     </div>
   </div>
   <div class="right">
-    <div *ngFor="let command of gameview.commandHistory">
-      {{ command.logText }}
-    </div>
+    <mat-list dense>
+      <mat-list-item *ngFor="let command of gameview.commandHistory">
+        {{ command.logText }}
+      </mat-list-item>
+    </mat-list>
   </div>
 </ng-container>
