--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="gameview$ | async as gameview">
-  <div class="left">
+  <div class="section left">
     <div class="mat-title">Players</div>
     <div class="entity-container">
       <app-player
@@ -59,7 +59,7 @@
       ></app-card>
     </div>
   </div>
-  <div class="middle">
+  <div class="section middle">
     <div class="mat-title">Attacking Units</div>
     <div class="entity-container">
       <app-unit
@@ -100,7 +100,7 @@
       ></app-card>
     </div>
   </div>
-  <div class="right">
+  <div class="section right">
     <mat-list dense>
       <mat-list-item *ngFor="let command of gameview.commandHistory">
         {{ command.logText }}
