--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -1,5 +1,11 @@
 :host
   display: flex
+  flex: 1
+  min-height: 0
+
+.section
+  min-height: 0
+  overflow: auto
 
 .left
   align-items: center
@@ -19,6 +25,7 @@
 .entity-container
   align-items: flex-start
   display: flex
+  flex: 0 0 auto
   flex-wrap: wrap
   justify-content: center
   min-height: 100px
