--- a/src/app/game-room/game-room.component.html
+++ b/src/app/game-room/game-room.component.html
@@ -12,7 +12,7 @@
       <div>
         <div class="mat-h1">Joined players</div>
         <ul>
-          <li *ngFor="let name of roomView.playerNames">{{ name }}</li>
+          <li *ngFor="let name of roomView.joinedPlayerNames">{{ name }}</li>
         </ul>
         <button (click)="start()">Start game</button>
       </div>
