--- a/src/app/game-room/game-room.component.sass
+++ b/src/app/game-room/game-room.component.sass
@@ -2,3 +2,9 @@
   display: flex
   flex-direction: column
   height: 100%
+
+.prep
+  align-items: flex-start
+  display: flex
+  flex-direction: column
+  padding: 10px
