--- a/src/app/game-room/game-room.component.sass
+++ b/src/app/game-room/game-room.component.sass
@@ -3,6 +3,10 @@
   flex-direction: column
   height: 100%
 
+.header
+  display: flex
+  justify-content: space-between
+
 .prep
   align-items: flex-start
   display: flex
