--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -1,4 +1,5 @@
 @use '~src/app/targetable'
+@import '~@angular/material/theming'
 
 :host
   background-color: #EDE7F6
@@ -8,6 +9,10 @@
   padding: 10px
   width: 200px
   word-break: break-word
+
+:host(.isCurrent)
+  @include mat-elevation(8)
+  border: solid 2px #4CAF50
 
 .header
   display: flex
