--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,8 @@
-<div class="header">
-  <span class="name mat-body-2">{{ card.name }}</span>
-  <span class="kind mat-body-1">{{ card.kind }}</span>
+<div class="header mat-body-2">
+  <span class="name">{{ card.name }}</span>
+  <span class="kind">{{ card.kind }}</span>
 </div>
-<div class="stats">
+<div class="stats mat-body-1">
   <span *ngIf="card.strength > 0" class="strength">🗡️{{ card.strength }}</span>
   <span class="cost">⚡{{ card.cost }}</span>
   <ng-container class="color" *ngFor="let color of card.colors" [ngSwitch]="color">
