--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,8 +1,8 @@
-<div class="header mat-body-1">
+<div class="header mat-body-2">
   <span class="name">{{ player.name }}</span>
   <span class="hp">❤️ {{ player.hp }}</span>
 </div>
-<div class="stats">
+<div class="stats mat-body-1">
   <span class="wrap-tokens">
     Warp tokens: {{ player.warpTokens }}
   </span>
