--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -1,7 +1,7 @@
-<div class="header">
+<div class="header mat-body-2">
   <span class="name">{{ unit.name }}</span>
 </div>
-<div class="stats">
+<div class="stats mat-body-1">
   <span class="strength">🗡️ {{ unit.strength }}</span>
   <span class="defense">🛡️ {{ unit.defense }}</span>
   <div>
