--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -8,19 +8,23 @@
   overflow: auto
 
 .left
-  align-items: center
   display: flex
   flex: 2
   flex-direction: column
 
 .middle
-  align-items: center
   display: flex
   flex: 3
   flex-direction: column
 
 .right
   flex: 1
+
+.area
+  align-items: center
+  display: flex
+  flex-direction: column
+  margin: 5px
 
 .entity-container
   align-items: flex-start
