--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,109 +1,120 @@
 <ng-container *ngIf="gameview$ | async as gameview">
   <div class="section left">
-    <div class="mat-title">Players</div>
-    <div class="entity-container">
-      <app-player
-        appTargetable
-        *ngFor="let player of gameview.players"
-        [entityId]="player.id"
-        [player]="player"
-      ></app-player>
-    </div>
-    <div class="mat-title">
-      Forge
-      <span
-        *ngIf="gameview.throneDeck.length == 0"
-        class="throne-active mat-subheading-2"
-      >
-        Throne active
-      </span>
-    </div>
-    <div class="entity-container">
-      <div class="throne-deck" *ngIf="gameview.throneDeck.length > 0">
-        <div>Seek Power remaining: {{ gameview.throneDeck.length }}</div>
-        <!-- Loop hack so angular knows to always update this. -->
-        <ng-container
-          *ngFor="let seekPower of gameview.throneDeck; first as isFirst"
-        >
-          <app-card
-            appTargetable
-            *ngIf="isFirst"
-            [entityId]="seekPower.id"
-            [card]="seekPower"
-          ></app-card>
-        </ng-container>
+    <div class="area">
+      <div class="mat-title">Players</div>
+      <div class="entity-container">
+        <app-player
+          appTargetable
+          *ngFor="let player of gameview.players"
+          [entityId]="player.id"
+          [player]="player"
+        ></app-player>
       </div>
-      <div class="mercenary-deck" *ngIf="gameview.mercenaryDeck.length > 0">
-        <div>
-          Veteran Mercenary remaining: {{ gameview.mercenaryDeck.length }}
+    </div>
+    <div class="area">
+      <div class="mat-title">
+        Forge
+        <span *ngIf="gameview.throneDeck.length == 0" class="throne-active">
+          Throne active
+        </span>
+      </div>
+      <div class="entity-container">
+        <div class="throne-deck" *ngIf="gameview.throneDeck.length > 0">
+          <div>Seek Power remaining: {{ gameview.throneDeck.length }}</div>
+          <!-- Loop hack so angular knows to always update this. -->
+          <ng-container
+            *ngFor="let seekPower of gameview.throneDeck; first as isFirst"
+          >
+            <app-card
+              appTargetable
+              *ngIf="isFirst"
+              [entityId]="seekPower.id"
+              [card]="seekPower"
+            ></app-card>
+          </ng-container>
         </div>
-        <ng-container
-          *ngFor="let mercenary of gameview.mercenaryDeck; first as isFirst"
-        >
-          <app-card
-            appTargetable
-            *ngIf="isFirst"
-            [entityId]="mercenary.id"
-            [card]="mercenary"
-          ></app-card>
-        </ng-container>
+        <div class="mercenary-deck" *ngIf="gameview.mercenaryDeck.length > 0">
+          <div>
+            Veteran Mercenary remaining: {{ gameview.mercenaryDeck.length }}
+          </div>
+          <ng-container
+            *ngFor="let mercenary of gameview.mercenaryDeck; first as isFirst"
+          >
+            <app-card
+              appTargetable
+              *ngIf="isFirst"
+              [entityId]="mercenary.id"
+              [card]="mercenary"
+            ></app-card>
+          </ng-container>
+        </div>
       </div>
     </div>
-    <div class="mat-subheading-2">Forge row</div>
-    <div class="entity-container">
-      <app-card
-        appTargetable
-        *ngFor="let card of gameview.forgeRow"
-        [entityId]="card.id"
-        [card]="card"
-      ></app-card>
+    <div class="area">
+      <div class="mat-title">Forge row</div>
+      <div class="entity-container">
+        <app-card
+          appTargetable
+          *ngFor="let card of gameview.forgeRow"
+          [entityId]="card.id"
+          [card]="card"
+        ></app-card>
+      </div>
     </div>
   </div>
   <div class="section middle">
-    <div class="mat-title">Attacking Units</div>
-    <div class="entity-container">
-      <app-unit
-        class="attacking"
-        appTargetable
-        *ngFor="let unit of gameview.attackingUnits"
-        [entityId]="unit.id"
-        [unit]="unit"
-      ></app-unit>
+    <div class="area">
+      <div class="mat-title">Attacking Units</div>
+      <div class="entity-container">
+        <app-unit
+          class="attacking"
+          appTargetable
+          *ngFor="let unit of gameview.attackingUnits"
+          [entityId]="unit.id"
+          [unit]="unit"
+        ></app-unit>
+        <div *ngIf="gameview.attackingUnits.length == 0">
+          No attacking units
+        </div>
+      </div>
     </div>
-    <div *ngIf="gameview.attackingUnits.length == 0">
-      No attacking units
+    <div class="area">
+      <div class="mat-title">Defending Units</div>
+      <div class="entity-container">
+        <app-unit
+          class="defending"
+          appTargetable
+          *ngFor="let unit of gameview.defendingUnits"
+          [entityId]="unit.id"
+          [unit]="unit"
+        ></app-unit>
+        <div *ngIf="gameview.defendingUnits.length == 0">
+          No defending units
+        </div>
+      </div>
     </div>
-    <div class="mat-title">Defending Units</div>
-    <div class="entity-container">
-      <app-unit
-        class="defending"
-        appTargetable
-        *ngFor="let unit of gameview.defendingUnits"
-        [entityId]="unit.id"
-        [unit]="unit"
-      ></app-unit>
+    <div class="area">
+      <div class="mat-title">Play Area</div>
+      <div class="entity-container">
+        <app-card
+          appTargetable
+          *ngFor="let card of gameview.playArea"
+          [entityId]="card.id"
+          [card]="card"
+        ></app-card>
+      </div>
     </div>
-    <div *ngIf="gameview.defendingUnits.length == 0">
-      No defending units
-    </div>
-    <div class="mat-title">Play Area</div>
-    <div class="entity-container">
-      <app-card
-        appTargetable
-        *ngFor="let card of gameview.playArea"
-        [entityId]="card.id"
-        [card]="card"
-      ></app-card>
-    </div>
-    <div class="mat-title">Hand</div>
-    <div class="entity-container">
-      <app-card
-        class="hand"
-        appTargetable
-        *ngFor="let card of gameview.hand"
-        [entityId]="card.id"
-        [card]="card"
-      ></app-card>
+    <div class="area">
+      <div class="mat-title">Hand</div>
+      <div class="entity-container">
+        <app-card
+          class="hand"
+          appTargetable
+          *ngFor="let card of gameview.hand"
+          [entityId]="card.id"
+          [card]="card"
+        ></app-card>
+      </div>
     </div>
   </div>
   <div class="section right">
