use host-context to conditionally hide buttons
host-context op

--- a/src/app/action/action.component.sass
+++ b/src/app/action/action.component.sass
@@ -4,7 +4,11 @@
   margin: 5px 0
   max-width: 100%
 
+:host-context(.canAct) button
+  display: block
+
 button
+  display: none
   margin-right: 5px
   overflow: hidden
   text-overflow: ellipsis
