--- a/src/app/game-room/game-room.component.html
+++ b/src/app/game-room/game-room.component.html
@@ -6,6 +6,7 @@
     </mat-toolbar>
     <app-game
       *ngIf="roomView.isGameInProgress; else prep"
+      [attachmentView$]="attachmentView$"
       [gameview$]="gameView$"
     ></app-game>
     <ng-template #prep>
