--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -117,7 +117,7 @@
   </div>
   <div class="section right">
     <mat-list dense>
-      <mat-list-item *ngFor="let command of gameview.commandHistory">
+      <mat-list-item *ngFor="let command of commandHistory">
         {{ command.logText }}
       </mat-list-item>
     </mat-list>
