display discard pile in tabs

--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -10,7 +10,10 @@
   word-break: break-word
 
 :host(.hand)
-  background-color: #FAFAFA
+  background-color: #CFD8DC
+
+:host(.discard-pile)
+  background-color: #F5F5F5
 
 .header
   align-items: center
