--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -61,8 +61,8 @@
     </div>
   </div>
   <div class="section middle">
-    <div class="area">
-      <div class="mat-title">Attacking Units</div>
+    <div class="area" *ngIf="gameview.previousPlayerName">
+      <div class="mat-title">{{ previousPlayerName }} Attacking Units</div>
       <div class="entity-container">
         <app-unit
           class="attacking"
@@ -77,7 +77,7 @@
       </div>
     </div>
     <div class="area">
-      <div class="mat-title">Defending Units</div>
+      <div class="mat-title">{{ currentPlayerName }} Defending Units</div>
       <div class="entity-container">
         <app-unit
           class="defending"
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div class="area">
-      <div class="mat-title">Play Area</div>
+      <div class="mat-title">{{ currentPlayerName }} Play Area</div>
       <div class="entity-container">
         <app-card
           appTargetable
@@ -103,7 +103,7 @@
       </div>
     </div>
     <mat-tab-group mat-align-tabs="center">
-      <mat-tab label="Hand">
+      <mat-tab label="Your Hand">
         <div class="area">
           <div class="entity-container">
             <app-card
@@ -116,7 +116,7 @@
           </div>
         </div>
       </mat-tab>
-      <mat-tab label="Discard Pile">
+      <mat-tab label="Your Discard Pile">
         <div class="area">
           <div class="entity-container">
             <app-card
