--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -6,11 +6,11 @@
   <span *ngIf="card.strength > 0" class="strength">🗡️{{ card.strength }}</span>
   <span class="cost">⚡{{ card.cost }}</span>
   <ng-container class="color" *ngFor="let color of card.colors" [ngSwitch]="color">
-    <span *ngSwitchCase="'Red'">🔴</span>
-    <span *ngSwitchCase="'Green'">🟢</span>
-    <span *ngSwitchCase="'Blue'">🔵</span>
-    <span *ngSwitchCase="'Yellow'">🟡</span>
-    <span *ngSwitchCase="'Black'">⚫</span>
+    <span class="circle red" *ngSwitchCase="'Red'"></span>
+    <span class="circle green" *ngSwitchCase="'Green'"></span>
+    <span class="circle blue" *ngSwitchCase="'Blue'"></span>
+    <span class="circle yellow" *ngSwitchCase="'Yellow'"></span>
+    <span class="circle black" *ngSwitchCase="'Black'"></span>
   </ng-container>
 </div>
 <div class="description mat-body-1">
