--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -38,3 +38,21 @@
 
 .description
   margin-bottom: 5px
+
+.circle
+  border-radius: 50%
+  display: inline-block
+  height: 16px
+  margin-left: 5px
+  width: 16px
+
+.red
+  background-color: red
+.green
+  background-color: green
+.blue
+  background-color: blue
+.yellow
+  background-color: yellow
+.black
+  background-color: black
