--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -7,21 +7,32 @@
   min-height: 0
   overflow: auto
 
-.left
+.players
+  align-items: center
+  display: flex
+  flex: 1
+  flex-direction: column
+
+.forge
+  align-items: center
   display: flex
   flex: 2
   flex-direction: column
 
+.forge-count
+  align-self: stretch
+  display: flex
+  justify-content: space-around
+
 .right
   display: flex
-  flex: 4
+  flex: 5
   flex-direction: column
 
 .area
   align-items: center
   display: flex
   flex-direction: column
-  margin: 5px
 
 .entity-container
   align-items: flex-start
