--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -7,7 +7,7 @@
   flex-direction: column
   margin: 5px
   padding: 10px
-  width: 200px
+  width: 9vw
   word-break: break-word
 
 :host(.isCurrent)
