--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -5,7 +5,7 @@
   flex-direction: column
   margin: 5px
   padding: 10px
-  width: 250px
+  width: 9vw
   word-break: break-word
 
 :host(.attacking)
