--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -24,6 +24,10 @@
   display: flex
   justify-content: space-around
 
+.throne-active
+  color: purple
+  font-weight: bold
+
 .main
   display: flex
   flex: 5
@@ -34,23 +38,13 @@
   display: flex
   flex-direction: column
 
+.area,
+.tabs
+  flex: 1
+
 .entity-container
   align-items: flex-start
   display: flex
   flex: 0 0 auto
   flex-wrap: wrap
   justify-content: center
-
-.mercenary-deck
-  align-items: center
-  display: flex
-  flex-direction: column
-
-.throne-deck
-  align-items: center
-  display: flex
-  flex-direction: column
-
-.throne-active
-  color: purple
-  font-weight: bold
