--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -79,6 +79,7 @@
             *ngFor="let card of hand"
             [entityId]="card.id"
             [card]="card"
+            [hideCost]="true"
           ></app-card>
         </div>
         <div *ngIf="hand.length == 0" class="mat-subheading-2">
@@ -95,6 +96,7 @@
             *ngFor="let card of discardPile"
             [entityId]="card.id"
             [card]="card"
+            [hideCost]="true"
           ></app-card>
         </div>
         <div *ngIf="discardPile.length == 0" class="mat-subheading-2">
