--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="stats mat-body-1">
   <span *ngIf="card.strength > 0" class="strength">🗡️{{ card.strength }}</span>
-  <span *ngIf="!hideCost" class="cost">⚡{{ card.cost }}</span>
+  <span *ngIf="showCost" class="cost">⚡{{ card.cost }}</span>
   <span class="expand"></span>
   <ng-container *ngFor="let color of card.colors" [ngSwitch]="color">
     <span class="circle red" *ngSwitchCase="'Red'"></span>
